--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,22 @@
 sudo: required
 services:
-    - docker
- 
+  - docker
+
 before_install:
-    - docker build -t ramesh/react-test -f ./client/Dockerfile.dev ./client
-scripts:
-    - docker run ramesh/react-test npm test -- --coverage
+  - docker build -t stephengrider/react-test -f ./client/Dockerfile.dev ./client
+
+script:
+  - docker run stephengrider/react-test npm test -- --coverage
 
 after_success:
-
-    - docker build -t ramesh/multi-client ./client
-    - docker build -t ramesh/multi-nginx ./nginx
-    - docker build -t ramesh/multi-server ./server
-    - docker build -t ramesh/multi-worker ./worker
-    - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
-    - docker push ramesh/multi-client
-    - docker push ramesh/multi-nginx
-    - docker push ramesh/multi-server
-    - docker push ramesh/multi-worker
-
+  - docker build -t stephengrider/multi-client ./client
+  - docker build -t stephengrider/multi-nginx ./nginx
+  - docker build -t stephengrider/multi-server ./server
+  - docker build -t stephengrider/multi-worker ./worker
+  # Log in to the docker CLI
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
+  # Take those images and push them to docker hub
+  - docker push stephengrider/multi-client
+  - docker push stephengrider/multi-nginx
+  - docker push stephengrider/multi-server
+  - docker push stephengrider/multi-worker
