--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,20 @@ after_success:
   - docker push ramesh4u420/multi-nginx
   - docker push ramesh4u420/multi-server
   - docker push ramesh4u420/multi-worker
+
+deploy:
+        provider: elasticbeanstalk
+        region: us-east-2
+        app: multi-docker
+        env: MultiDocker-env
+        bucket_name: test
+        bucket_path: docker-multi
+        on:
+                branch: master
+        access_key_id: $AWS_ACCESS_KEY
+        secret_access_key: 
+          secure: $AWS_SECRET_KEY
+
+
+
+
